--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -10,5 +10,5 @@ jobs:
       - name: Validate JSON
         uses: docker://orrosenblatt/validate-json-action:latest
         env:
-          INPUT_SCHEMA: ./schemas/list.json
-          INPUT_JSONS: /path/to/file.json,/path/to/another/file.json
+          INPUT_SCHEMA: ./schema.json
+          INPUT_JSONS: ./shops.json
