--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -1,6 +1,6 @@
 name: Validate JSONs
 
-on: [pull_request]
+on: [push]
 
 jobs:
   verify-json-validation:
@@ -10,5 +10,5 @@ jobs:
       - name: Validate JSON
         uses: docker://orrosenblatt/validate-json-action:latest
         env:
-          INPUT_SCHEMA: ./schema.json
-          INPUT_JSONS: ./shops.json
+          INPUT_SCHEMA: schema.json
+          INPUT_JSONS: shops.json
