Trying another validator

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -1,14 +1,22 @@
-name: Validate JSONs
+name: json-yaml-validate 
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+  workflow_dispatch:
 
-on: [push]
+permissions:
+  contents: read
 
 jobs:
-  verify-json-validation:
+  json-yaml-validate:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - name: Validate JSON
-        uses: docker://orrosenblatt/validate-json-action:latest
-        env:
-          INPUT_SCHEMA: ../../schema.json
-          INPUT_JSONS: ../../shops.json
+      - uses: actions/checkout@v4
+
+      - name: json-yaml-validate
+        id: json-yaml-validate
+        uses: GrantBirki/json-yaml-validate@v3.2.1 # replace with the latest version
+        with:
+          json_schema: schema.json
